# bitris

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs
.cargo/: config  config.toml
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: benchmarks.yaml  tests.yaml
benches/: boards.rs  can_reach_in_srs.rs  moves_in_srs.rs
bitris_cpp/: CMakeLists.txt
bitris_cpp/bitris/: CMakeLists.txt
bitris_cpp/bitris/include/: .gitignore  bits.hpp  board.hpp  data.hpp  ffi.hpp  free_spaces.hpp  hello.hpp  kicks.hpp  pieces.hpp  rotate.hpp  rows.hpp  search.hpp  search2.hpp  templates.hpp
bitris_cpp/bitris/src/: board.cpp  hello.cpp  search.cpp
bitris_cpp/main/: CMakeLists.txt  main.cpp
bitris_cpp/test/: CMakeLists.txt
bitris_cpp/test/bitris/: test_bits.cpp  test_data.cpp  test_free_spaces.cpp  test_rows.cpp
example/: Cargo.toml
example/src/: main.rs  n01_primitives.rs  n02_boards.rs  n03_placements.rs  n04_moves.rs
examples/: generate_codes_avx_moves.rs  generate_codes_u64_moves.rs  generator_srs.rs  n01_primitives.rs  n02_boards.rs  n03_place.rs  n04_moves.rs
src/: array_map.rs  boards.rs  enums.rs  internal_macros.rs  internal_moves.rs  kicks.rs  lib.rs  location.rs  moves.rs  myffi.rs  offset.rs  operators.rs  order.rs  orientation.rs  piece.rs  piece_blocks.rs  placements.rs  positions.rs  rotation.rs  shape.rs  traits.rs
src/avx2/: aligned.rs  board.rs  candidates.rs  free.rs  free_loaders.rs  free_space.rs  internal_moves.rs  mod.rs  reachable.rs  rotate.rs  rotate_loaders.rs  simd.rs
src/boards/: board.rs  lines.rs  mod.rs  operators.rs
src/coordinates/: bl_position.rs  cc_position.rs  location.rs  mod.rs  offset.rs  tr_position.rs
src/internal_moves/: mod.rs
src/internal_moves/avx2/: aligned.rs  free.rs  free_space.rs  loaders.rs  minimize.rs  mod.rs  moves.rs  opsimd.rs  reachable.rs  rotate.rs  softdrop.rs
src/internal_moves/avx2/h16/: aligned.rs  free.rs  free_space.rs  loaders.rs  minimize.rs  mod.rs  opsimd.rs  reachable.rs  rotate.rs  softdrop.rs
src/internal_moves/avx2/h16/x2/: loaders.rs  mod.rs  softdrop.rs
src/internal_moves/avx2/h24/: aligned.rs  free.rs  free_space.rs  loaders.rs  minimize.rs  mod.rs  opsimd.rs  reachable.rs  rotate.rs  softdrop.rs
src/internal_moves/moves64/: moves.rs
src/internal_moves/u64/: free.rs  free_space.rs  harddrop.rs  loaders.rs  minimize.rs  mod.rs  moves.rs  opu64.rs  reachable.rs  softdrop.rs
src/macros/: mod.rs
src/pieces/: mod.rs  orientation.rs  piece.rs  piece_blocks.rs  shape.rs
src/placements/: bl_placement.rs  cc_placement.rs  mod.rs  placed_piece.rs  placed_piece_blocks.rs  placed_piece_blocks_flow.rs  placement_flow.rs  tr_placement.rs
src/srs/: kicks.rs  mod.rs  moves.rs
