[package]
name = "bitris"
version = "0.2.0"
edition = "2021"
authors = ["knewjade"]
license = "MIT"

[dependencies]
itertools = "0.13.0"
tinyvec = "1.6.0"
fxhash = "0.2.1"
thiserror = "2.0.9"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
itertools = "0.13.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"

[lib]
bench = false

[[bench]]
name = "boards"
harness = false

[[bench]]
name = "moves_in_srs"
harness = false
